docs/tests/parser/concurrency/invalid/CriticalMissingOpenBrace.b
fn void test() {
    critical
        x = 1;
}
